provolone.output
State 3 conflicts: 1 shift/reduce
State 16 conflicts: 6 shift/reduce
State 33 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ENTRADA var_list SAIDA var_list cmds FIM

    2 var_list: STRING var_list
    3         | STRING

    4 cmds: cmd cmds
    5     | cmd

    6 cmd: FACA STRING VEZES cmds FIM
    7    | ENQUANTO STRING FACA cmds FIM
    8    | SE STRING ENTAO cmds SENAO cmds
    9    | SE STRING ENTAO cmds
   10    | STRING EQ STRING
   11    | INC OPEN_PAR STRING CLOSE_PAR
   12    | ZERA OPEN_PAR STRING CLOSE_PAR


Terminals, with rules where they appear

$end (0) 0
error (256)
ENTRADA (258) 1
SAIDA (259) 1
FIM (260) 1 6 7
FACA (261) 6 7
VEZES (262) 6
ENQUANTO (263) 7
SE (264) 8 9
ENTAO (265) 8 9
SENAO (266) 8
INC (267) 11
ZERA (268) 12
OPEN_PAR (269) 11 12
CLOSE_PAR (270) 11 12
EQ (271) 10
STRING (272) 2 3 6 7 8 9 10 11 12


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
program (19)
    on left: 1, on right: 0
var_list (20)
    on left: 2 3, on right: 1 2
cmds (21)
    on left: 4 5, on right: 1 4 6 7 8 9
cmd (22)
    on left: 6 7 8 9 10 11 12, on right: 4 5


State 0

    0 $accept: . program $end

    ENTRADA  shift, and go to state 1

    program  go to state 2


State 1

    1 program: ENTRADA . var_list SAIDA var_list cmds FIM

    STRING  shift, and go to state 3

    var_list  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    2 var_list: STRING . var_list
    3         | STRING .

    STRING  shift, and go to state 3

    STRING    [reduce using rule 3 (var_list)]
    $default  reduce using rule 3 (var_list)

    var_list  go to state 6


State 4

    1 program: ENTRADA var_list . SAIDA var_list cmds FIM

    SAIDA  shift, and go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    2 var_list: STRING var_list .

    $default  reduce using rule 2 (var_list)


State 7

    1 program: ENTRADA var_list SAIDA . var_list cmds FIM

    STRING  shift, and go to state 3

    var_list  go to state 8


State 8

    1 program: ENTRADA var_list SAIDA var_list . cmds FIM

    FACA      shift, and go to state 9
    ENQUANTO  shift, and go to state 10
    SE        shift, and go to state 11
    INC       shift, and go to state 12
    ZERA      shift, and go to state 13
    STRING    shift, and go to state 14

    cmds  go to state 15
    cmd   go to state 16


State 9

    6 cmd: FACA . STRING VEZES cmds FIM

    STRING  shift, and go to state 17


State 10

    7 cmd: ENQUANTO . STRING FACA cmds FIM

    STRING  shift, and go to state 18


State 11

    8 cmd: SE . STRING ENTAO cmds SENAO cmds
    9    | SE . STRING ENTAO cmds

    STRING  shift, and go to state 19


State 12

   11 cmd: INC . OPEN_PAR STRING CLOSE_PAR

    OPEN_PAR  shift, and go to state 20


State 13

   12 cmd: ZERA . OPEN_PAR STRING CLOSE_PAR

    OPEN_PAR  shift, and go to state 21


State 14

   10 cmd: STRING . EQ STRING

    EQ  shift, and go to state 22


State 15

    1 program: ENTRADA var_list SAIDA var_list cmds . FIM

    FIM  shift, and go to state 23


State 16

    4 cmds: cmd . cmds
    5     | cmd .

    FACA      shift, and go to state 9
    ENQUANTO  shift, and go to state 10
    SE        shift, and go to state 11
    INC       shift, and go to state 12
    ZERA      shift, and go to state 13
    STRING    shift, and go to state 14

    FACA      [reduce using rule 5 (cmds)]
    ENQUANTO  [reduce using rule 5 (cmds)]
    SE        [reduce using rule 5 (cmds)]
    INC       [reduce using rule 5 (cmds)]
    ZERA      [reduce using rule 5 (cmds)]
    STRING    [reduce using rule 5 (cmds)]
    $default  reduce using rule 5 (cmds)

    cmds  go to state 24
    cmd   go to state 16


State 17

    6 cmd: FACA STRING . VEZES cmds FIM

    VEZES  shift, and go to state 25


State 18

    7 cmd: ENQUANTO STRING . FACA cmds FIM

    FACA  shift, and go to state 26


State 19

    8 cmd: SE STRING . ENTAO cmds SENAO cmds
    9    | SE STRING . ENTAO cmds

    ENTAO  shift, and go to state 27


State 20

   11 cmd: INC OPEN_PAR . STRING CLOSE_PAR

    STRING  shift, and go to state 28


State 21

   12 cmd: ZERA OPEN_PAR . STRING CLOSE_PAR

    STRING  shift, and go to state 29


State 22

   10 cmd: STRING EQ . STRING

    STRING  shift, and go to state 30


State 23

    1 program: ENTRADA var_list SAIDA var_list cmds FIM .

    $default  reduce using rule 1 (program)


State 24

    4 cmds: cmd cmds .

    $default  reduce using rule 4 (cmds)


State 25

    6 cmd: FACA STRING VEZES . cmds FIM

    FACA      shift, and go to state 9
    ENQUANTO  shift, and go to state 10
    SE        shift, and go to state 11
    INC       shift, and go to state 12
    ZERA      shift, and go to state 13
    STRING    shift, and go to state 14

    cmds  go to state 31
    cmd   go to state 16


State 26

    7 cmd: ENQUANTO STRING FACA . cmds FIM

    FACA      shift, and go to state 9
    ENQUANTO  shift, and go to state 10
    SE        shift, and go to state 11
    INC       shift, and go to state 12
    ZERA      shift, and go to state 13
    STRING    shift, and go to state 14

    cmds  go to state 32
    cmd   go to state 16


State 27

    8 cmd: SE STRING ENTAO . cmds SENAO cmds
    9    | SE STRING ENTAO . cmds

    FACA      shift, and go to state 9
    ENQUANTO  shift, and go to state 10
    SE        shift, and go to state 11
    INC       shift, and go to state 12
    ZERA      shift, and go to state 13
    STRING    shift, and go to state 14

    cmds  go to state 33
    cmd   go to state 16


State 28

   11 cmd: INC OPEN_PAR STRING . CLOSE_PAR

    CLOSE_PAR  shift, and go to state 34


State 29

   12 cmd: ZERA OPEN_PAR STRING . CLOSE_PAR

    CLOSE_PAR  shift, and go to state 35


State 30

   10 cmd: STRING EQ STRING .

    $default  reduce using rule 10 (cmd)


State 31

    6 cmd: FACA STRING VEZES cmds . FIM

    FIM  shift, and go to state 36


State 32

    7 cmd: ENQUANTO STRING FACA cmds . FIM

    FIM  shift, and go to state 37


State 33

    8 cmd: SE STRING ENTAO cmds . SENAO cmds
    9    | SE STRING ENTAO cmds .

    SENAO  shift, and go to state 38

    SENAO     [reduce using rule 9 (cmd)]
    $default  reduce using rule 9 (cmd)


State 34

   11 cmd: INC OPEN_PAR STRING CLOSE_PAR .

    $default  reduce using rule 11 (cmd)


State 35

   12 cmd: ZERA OPEN_PAR STRING CLOSE_PAR .

    $default  reduce using rule 12 (cmd)


State 36

    6 cmd: FACA STRING VEZES cmds FIM .

    $default  reduce using rule 6 (cmd)


State 37

    7 cmd: ENQUANTO STRING FACA cmds FIM .

    $default  reduce using rule 7 (cmd)


State 38

    8 cmd: SE STRING ENTAO cmds SENAO . cmds

    FACA      shift, and go to state 9
    ENQUANTO  shift, and go to state 10
    SE        shift, and go to state 11
    INC       shift, and go to state 12
    ZERA      shift, and go to state 13
    STRING    shift, and go to state 14

    cmds  go to state 39
    cmd   go to state 16


State 39

    8 cmd: SE STRING ENTAO cmds SENAO cmds .

    $default  reduce using rule 8 (cmd)
